--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     </modules>
     <properties>
         <compiler-plugin.version>3.11.0</compiler-plugin.version>
+        <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -41,10 +42,6 @@
         <quarkus.version>3.1.0.Final</quarkus.version>
         <awssdk.version>2.20.65</awssdk.version>
         <awscrt.version>0.21.15</awscrt.version>
-        <!-- required by testcontainer localstack to run but not used
-            https://github.com/testcontainers/testcontainers-java/issues/4279
-        -->
-        <awssdk.v1.version>1.12.468</awssdk.v1.version>
     </properties>
     <build>
         <pluginManagement>
