--- a/pom.xml
+++ b/pom.xml
@@ -1,77 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>io.quarkiverse</groupId>
-        <artifactId>quarkiverse-parent</artifactId>
-        <version>14</version>
-    </parent>
-    <groupId>io.quarkiverse.amazonservices</groupId>
-    <artifactId>quarkus-amazon-services-parent</artifactId>
-    <version>999-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Quarkus - Amazon Services - Parent</name>
-    <modules>
-        <module>bom</module>
-        <module>build-parent</module>
-        <module>cognito-user-pools</module>
-        <module>common</module>
-        <module>devservices</module>
-        <module>dynamodb</module>
-        <module>dynamodb-enhanced</module>
-        <module>iam</module>
-        <module>s3</module>
-        <module>sns</module>
-        <module>sqs</module>
-        <module>ses</module>
-        <module>kms</module>
-        <module>ssm</module>
-        <module>sts</module>
-        <module>secretsmanager</module>
-        <module>docs</module>
-        <module>integration-tests</module>
-    </modules>
-    <properties>
-        <compiler-plugin.version>3.11.0</compiler-plugin.version>
-        <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
-        <maven.compiler.parameters>true</maven.compiler.parameters>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <quarkus.version>3.1.0.Final</quarkus.version>
-        <awssdk.version>2.20.72</awssdk.version>
-        <awscrt.version>0.21.17</awscrt.version>
-    </properties>
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-maven-plugin</artifactId>
-                    <version>${quarkus.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>io.quarkus</groupId>
-                    <artifactId>quarkus-extension-maven-plugin</artifactId>
-                    <version>${quarkus.version}</version>
-                    <executions>
-                        <execution>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>extension-descriptor</goal>
-                            </goals>
-                            <configuration>
-                                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${compiler-plugin.version}</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>io.quarkiverse</groupId>
+    <artifactId>quarkiverse-parent</artifactId>
+    <version>14</version>
+  </parent>
+  <groupId>io.quarkiverse.amazonservices</groupId>
+  <artifactId>quarkus-amazon-services-parent</artifactId>
+  <version>999-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <name>Quarkus - Amazon Services - Parent</name>
+  <modules>
+    <module>bom</module>
+    <module>build-parent</module>
+    <module>cognito-user-pools</module>
+    <module>common</module>
+    <module>devservices</module>
+    <module>dynamodb</module>
+    <module>dynamodb-enhanced</module>
+    <module>iam</module>
+    <module>s3</module>
+    <module>sns</module>
+    <module>sqs</module>
+    <module>ses</module>
+    <module>kms</module>
+    <module>ssm</module>
+    <module>sts</module>
+    <module>secretsmanager</module>
+    <module>docs</module>
+    <module>integration-tests</module>
+  </modules>
+  <scm>
+    <connection>:git:git@github.com:quarkiverse/quarkus-amazon-services.git</connection>
+    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-amazon-services.git</developerConnection>
+    <url>https://github.com/quarkiverse/quarkus-amazon-services</url>
+  </scm>
+  <properties>
+    <compiler-plugin.version>3.11.0</compiler-plugin.version>
+    <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
+    <maven.compiler.parameters>true</maven.compiler.parameters>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <quarkus.version>3.1.0.Final</quarkus.version>
+    <awssdk.version>2.20.72</awssdk.version>
+    <awscrt.version>0.21.17</awscrt.version>
+  </properties>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-extension-maven-plugin</artifactId>
+          <version>${quarkus.version}</version>
+          <executions>
+            <execution>
+              <phase>compile</phase>
+              <goals>
+                <goal>extension-descriptor</goal>
+              </goals>
+              <configuration>
+                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${compiler-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
