--- a/sts/runtime/pom.xml
+++ b/sts/runtime/pom.xml
@@ -76,8 +76,8 @@
         </dependency>
         
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
         </dependency>
     </dependencies>
 
