--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>ssm</module>
     <module>sts</module>
     <module>secretsmanager</module>
+    <module>secretsmanager-config</module>
     <module>docs</module>
     <module>integration-tests</module>
   </modules>
