--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>quarkus-amazon-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.opentelemetry.instrumentation</groupId>
+            <artifactId>opentelemetry-aws-sdk-2.2</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-opentelemetry-internal-deployment</artifactId> 
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-netty-client-internal-deployment</artifactId> 
             <optional>true</optional>
