--- a/common/pom.xml
+++ b/common/pom.xml
@@ -17,12 +17,14 @@
         <module>runtime-apache-client-internal</module>
         <module>runtime-netty-client-internal</module>
         <module>runtime-crt-client-internal</module>
+        <module>runtime-opentelemetry-internal</module>
         <module>runtime</module>
         <module>deployment-devservices-spi</module>
         <module>deployment-spi</module>
         <module>deployment-apache-client-internal</module>
         <module>deployment-netty-client-internal</module>
         <module>deployment-crt-client-internal</module>
+        <module>deployment-opentelemetry-internal</module>
         <module>deployment</module>
     </modules>
 
