--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -36,3 +36,6 @@ quarkus.sns.async-client.type=${async-client.type}
 quarkus.sqs.async-client.type=${async-client.type}
 quarkus.ssm.async-client.type=${async-client.type}
 quarkus.sts.async-client.type=${async-client.type}
+
+
+quarkus.s3.telemetry.enabled=true
