--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <quarkus.version>3.6.3</quarkus.version>
     <awssdk.version>2.22.1</awssdk.version>
     <awscrt.version>0.29.2</awscrt.version>
+    <awsotel.version>1.32.0-alpha</awsotel.version>
   </properties>
   <build>
     <pluginManagement>
